test: replace `Path.of` with `Paths.get` in UDP receiver test classes